Clear up commit.
I've decided to change approach to make this project. I'll do it in more
coherent way.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "old-warsaw",
+  "name": "retro-website",
   "version": "1.0.0",
   "description": "Vintage website created by using scss.",
   "main": "index.js",
