--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "uglify-js": "^3.8.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
